--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -309,16 +309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "553aafdc",
+   "execution_count": 67,
+   "id": "72c09dc6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 10) (2613931377.py, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[61], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    print('I don't know {name} from {company}')\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 10)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter user name: Hi\n",
+      "Enter company name: Ti\n",
+      "I dont know Hi from Ti\n"
      ]
     }
    ],
@@ -332,14 +333,14 @@
     "elif name != 'Jaspreet' and company == 'Cisco':\n",
     "    print(f'Greetings {name}!')\n",
     "else:\n",
-    "    print('I don't know {name} from {company}''')\n",
+    "    print(f'I dont know {name} from {company}')\n",
     "          \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "331122ee",
+   "id": "28d20545",
    "metadata": {},
    "outputs": [],
    "source": []
