--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bc91984f",
+   "id": "c41c3c80",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "03628f60",
+   "id": "1e2f00aa",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10ac57a1",
+   "id": "4be6dbf7",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db3ac820",
+   "id": "aa4fd3d6",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a808337",
+   "id": "c40bae12",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95c47abe",
+   "id": "6abd34eb",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a857ff",
+   "id": "96ad6b5f",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9747e221",
+   "id": "77e5dd1d",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "49a590a1",
+   "id": "b48dec7d",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "16ae3f99",
+   "id": "4ea4aaaa",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1ffc9efb",
+   "id": "24e5704c",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d2aa9dc9",
+   "id": "8186d390",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e193bbea",
+   "id": "46ad820d",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "79258b55",
+   "id": "fb2ada58",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce0a4a3",
+   "id": "4e2eb98e",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "201c0fd1",
+   "id": "cdc8e6ef",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8011e757",
+   "id": "d374257b",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fe3442e9",
+   "id": "f85cbf54",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "97fdc53d",
+   "id": "86a968bb",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d507cba3",
+   "id": "b3ce221b",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d86b05e4",
+   "id": "ca68a6e0",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0a088dbe",
+   "id": "86ae1d5c",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "44d4b3e7",
+   "id": "3cb52138",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "abd1174f",
+   "id": "22c2964b",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9352fc78",
+   "id": "d5f1cc34",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4ac4ce63",
+   "id": "765d21cd",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cff43d6b",
+   "id": "3f99299f",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b6b6f80f",
+   "id": "94e41c9a",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d033b5cb",
+   "id": "eac80bcd",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "57f9ec8a",
+   "id": "62743699",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4e66e4ac",
+   "id": "03f571bf",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d9ea6d9c",
+   "id": "551f2a82",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d75cbfd1",
+   "id": "5eb4cb1f",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "616f16ab",
+   "id": "f8f1e1cc",
    "metadata": {},
    "source": [
     "# Exercise: Multi-part greeting\n",
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "132518fe",
+   "id": "888b9d8b",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c97b3a7",
+   "id": "0fec264b",
    "metadata": {},
    "source": [
     "# f-strings\n",
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4a57dde5",
+   "id": "9efcf170",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "77f25edf",
+   "id": "701ef87e",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf82bc82",
+   "id": "5caf67f8",
    "metadata": {},
    "source": [
     "# Comparing values\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "02d59a9b",
+   "id": "afe423bf",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4b03fae6",
+   "id": "c29689fc",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "569b0611",
+   "id": "41293fdc",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0db1d4d3",
+   "id": "64792589",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1e428a15",
+   "id": "92949d60",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3566d405",
+   "id": "3eebe911",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5fab5714",
+   "id": "4a5ab951",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0a00f84b",
+   "id": "8a54a1af",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcb2b983",
+   "id": "795def73",
    "metadata": {},
    "source": [
     "# Comparison operators\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a9b6f5d5",
+   "id": "0b8bff81",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "4e971fe7",
+   "id": "9121bf76",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "848255f3",
+   "id": "04fde0bd",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f744d008",
+   "id": "e07cc0a3",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "10a46032",
+   "id": "bb42fec5",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12c0d721",
+   "id": "0a83a458",
    "metadata": {},
    "source": [
     "# Conditional execution\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ae9882f8",
+   "id": "fa78f0f3",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5994be6a",
+   "id": "84829f51",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "980212fc",
+   "id": "41d249ad",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first?\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fda732f4",
+   "id": "bb1d0ea7",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c0dcaa7",
+   "id": "e0e9aac2",
    "metadata": {},
    "source": [
     "# More sophisticated comparisons\n",
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ccd64c3f",
+   "id": "04c59251",
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1ca9e47",
+   "id": "8a287cba",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first? \n",
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec67de5f",
+   "id": "c56026c9",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b60f57a9",
+   "id": "3fad2e9d",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "7602ab2b",
+   "id": "bbcdcec4",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab17ff12",
+   "id": "ea44f46a",
    "metadata": {},
    "source": [
     "# Combining conditions\n",
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a90b487a",
+   "id": "5188cada",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "bb9c8825",
+   "id": "8902834e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "af2cd227",
+   "id": "a518274e",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "2dfde83c",
+   "id": "fb507136",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4fc57e7d",
+   "id": "5b8f8870",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7c6aba7",
+   "id": "f9a87e79",
    "metadata": {},
    "source": [
     "# Exercise: Name and company\n",
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "be32310d",
+   "id": "9d4b1cac",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "df921f38",
+   "id": "3f69886e",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "00472a00",
+   "id": "cac19430",
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c42de26",
+   "id": "568eb7f9",
    "metadata": {},
    "source": [
     "# The `not` logical operator\n",
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "14ab7cac",
+   "id": "1c582245",
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "80c7fd0f",
+   "id": "1ac19515",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7382cca7",
+   "id": "02bbcb7f",
    "metadata": {},
    "source": [
     "# Numbers\n",
@@ -1662,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "7056ed54",
+   "id": "5977856a",
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "1e6df6ab",
+   "id": "6b72b343",
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "798a4b17",
+   "id": "e57cac15",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "c568f3e8",
+   "id": "a6d7bee9",
    "metadata": {},
    "outputs": [
     {
@@ -1751,12 +1751,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "id": "7fe1cc57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3333333333333335"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x / y  # truediv -- returns a float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "02c8de27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x / x   # still returns a float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "ab307439",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x // y   # floordiv, returning an integer -- not rounding, just chopping off the decimal part"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "2b661fd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x // x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "38e667b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x ** y   # exponentiation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "119d0f05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x % y   # integer remainder after dividing x by y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cf7b4797",
+   "id": "702524e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x / y  # "
+    "# in many languages, we have to worry about the maximum int,\n",
+    "# because numbers are 64 bits in size. NOT IN PYTHON! There is no maximum int\n",
+    "\n"
    ]
   }
  ],
